--- a/contrib/gitian-descriptors/gitian-rpi2.yml
+++ b/contrib/gitian-descriptors/gitian-rpi2.yml
@@ -20,7 +20,7 @@ packages:
 - "python"
 reference_datetime: "2015-06-01 00:00:00"
 remotes:
-- "url": "https://github.com/divi-project/divi.git"
+- "url": "https://github.com/Divicoin/Divicoin.git"
   "dir": "divi"
 files:
 - "raspberrypi-tools.tar.gz"
